--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
               <a class="inline-block text-black no-underline hover:text-gray-800 hover:text-underline py-2 px-4" href="https://x.com/Meowgicoin">X (Twitter)</a>
             </li>
             <li class="mr-3">
-              <a class="inline-block text-black no-underline hover:text-gray-800 hover:text-underline py-2 px-4" href="#">Chart</a>
+              <a class="inline-block text-black no-underline hover:text-gray-800 hover:text-underline py-2 px-4" href="https://dexscreener.com/solana/hvd6tt5jcvatwsxt96dqogin1xmk6klpazjq1ykedvei">Buy</a>
             </li>
           </ul>
         </div>
